<resources>
    <string name="app_name">INDEKS</string>

    // Registration
    <string name="mail">lalta96@gmail.com</string>
    <string name="pass">lalta1</string>
    <string name="enterMailRegistration">Podaj e-mail</string>
    <string name="enterPasswordRegistration">Podaj hasło</string>
    <string name="buttonRegistration">Zarejestruj</string>
    <string name="textViewRegistration">Jesteś zarejestrowany? Zaloguj się!</string>

    // RegistrationInfo
    <string name="enterName">Imię/Imiona</string>
    <string name="enterSurname">Nazwisko</string>
    <string name="birthdayDate">Data urodzenia</string>
    <string name="enterPesel">PESEL</string>
    <string name="enterStreet">Ulica</string>
    <string name="enterCity">Miasto</string>
    <string name="enterPostalAddress">Kod pocztowy</string>
    <string name="enterBirthday">Data urodzenia</string>
    <string name="enterStudy">Kierunek studiów</string>
    <string name="enterPhoneNumber">Numer telefonu</string>
    <string name="buttonSave">Zapisz</string>

    <string name="Name">Mateusz</string>
    <string name="Surname">Latkowski</string>
    <string name="Pesel">96071302750</string>
    <string name="Street">Jesionowa 6/4</string>
    <string name="City">Łazy</string>
    <string name="PostalAddress">42-450</string>
    <string name="Birthday">13-07-1996</string>
    <string name="PhoneNumber">510563355</string>

    <string-array name="kierunki">
        <item>Administracja</item>
        <item>Architektura informacji</item>
        <item>Arteterapia</item>
        <item>Bezpieczeństwo narodowe i międzynarodowe</item>
        <item>Biofizyka</item>
        <item>Biologia</item>
        <item>Biotechnologia</item>
        <item>Chemia</item>
        <item>Doradztwo filozoficzne i coaching</item>
        <item>Doradztwo filozoficzne i publiczne</item>
        <item>Dziennikarstwo i komunikacja społeczna</item>
        <item>Edukacja artystyczna w zakresie sztuk plastycznych</item>
        <item>Edukacja kulturalna</item>
        <item>Ekonofizyka</item>
        <item>Etnologia i antropologia kulturowa</item>
        <item>Filologia angielska</item>
        <item>Filologia germańska</item>
        <item>Filologia klasyczna</item>
        <item>Filologia polska</item>
        <item>Informatyka</item>
        <item>Informatyka Stosowana</item>
        <item>Pedagogika</item>
        <item>Psychologia</item>
        <item></item>
    </string-array>

    // MainActivity - Login
    <string name="enterMail">Podaj e-mail</string>
    <string name="enterPassword">Podaj hasło</string>
    <string name="textViewLogin">Nie masz konta? Zarejestruj się!</string>
    <string name="textViewRecoveryPassword">Zapomniałeś hasła? Kliknij tutaj!</string>
    <string name="buttonLogin">ZALOGUJ</string>

    // Home
    <string name="text">Przykładowy tekst</string>
    <string name="buttonLogOut">Wyloguj</string>
    <string name="buttonUserProfile">Profil</string>
    <string name="buttonCalendar">Kalendarz</string>
    <string name="buttonSettings">Ustawienia</string>
    <string name="buttonSendMail">E-mail</string>
    <string name="buttonGrades">Oceny</string>
    <string name="buttonTeachers">Nauczyciele</string>

    // UserProfil
    <string name="imageDescription">imageStudent</string>
    <string name="buttonImageUpload">WGRAJ</string>
    <string name="buttonImageChange">WYBIERZ</string>

    // ReserPassword
    <string name="resetText">Na podany przez Ciebie adres e-mail zostanie wysłany link z aktywacją nowego hasła!</string>
    <string name="TextViewResetText">textReset</string>
    <string name="enterEmailReset">emailReset</string>
    <string name="buttonReset">Wyślij</string>

    // Settings
    <string name="photo">Załącz swoje zdjęcie</string>

    <string name="changePassword">Zmiana hasła</string>
    <string name="currentPassword">Obecne hasło</string>
    <string name="newPassword">Nowe hasło</string>
    <string name="newPassword2">Powtórz nowe hasło</string>
    <string name="buttonChangePassword">Zmień hasło</string>

    <string name="changeData">Zmień dane</string>
    <string name="changeStreet">Ulica</string>
    <string name="changeCity">Miasto</string>
    <string name="changePostalAddress">Kod pocztowy (00-000)</string>
    <string name="changePhoneNumber">Number telefonu</string>
    <string name="changeDataButton">AKTUALIZUJ</string>

    // SendEmail
    <string name="recipient">mateusz.latkowski@smcebi.edu.pl</string>
    <string name="subject">Próba</string>
    <string name="message">To jest pierwszy email</string>
    <string name="buttonSend">Wyślij</string>
    <string name="title_activity_grades">Grades</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>


</resources>
